<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.android.drl.Student_ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_notify"
        android:name="com.example.android.drl.Student_ui.NotifyFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_notify_student" />
    <fragment
        android:id="@+id/nav_pass"
        android:name="com.example.android.drl.Student_ui.ChangePassFragment"
        android:label="@string/menu_pass"
        tools:layout="@layout/fragment_notify_student" />
</navigation>